Fix Sonar warnings
https://jira.i-novus.ru/browse/RDM-1174